; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v02.c_FSE_decompress_usingDTable.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v02.c_FSE_decompress_usingDTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i8*, i64, i32*)* @FSE_decompress_usingDTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FSE_decompress_usingDTable(i8* %0, i64 %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %11, align 8
  %14 = call i32 @memcpy(%struct.TYPE_3__* %12, i32* %13, i32 8)
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %5
  %19 = load i8*, i8** %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = load i64, i64* %10, align 8
  %23 = load i32*, i32** %11, align 8
  %24 = call i64 @FSE_decompress_usingDTable_generic(i8* %19, i64 %20, i8* %21, i64 %22, i32* %23, i32 1)
  store i64 %24, i64* %6, align 8
  br label %32

25:                                               ; preds = %5
  %26 = load i8*, i8** %7, align 8
  %27 = load i64, i64* %8, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load i64, i64* %10, align 8
  %30 = load i32*, i32** %11, align 8
  %31 = call i64 @FSE_decompress_usingDTable_generic(i8* %26, i64 %27, i8* %28, i64 %29, i32* %30, i32 0)
  store i64 %31, i64* %6, align 8
  br label %32

32:                                               ; preds = %25, %18
  %33 = load i64, i64* %6, align 8
  ret i64 %33
}

declare dso_local i32 @memcpy(%struct.TYPE_3__*, i32*, i32) #1

declare dso_local i64 @FSE_decompress_usingDTable_generic(i8*, i64, i8*, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
